# 3997-chatbot-ollama

./: .env.example  .gitignore  Makefile  PRD.md  README.md  instructions  pyproject.toml  ruff.toml
client/: package-lock.json  package.json  playwright.config.ts
client/src/: App.tsx  index.css
client/src/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  MessageBubble.tsx  Sidebar.tsx  ToolIndicator.tsx
client/src/hooks/: useOllama.ts
client/src/types/: index.ts
client/src/utils/: markdown.tsx
client/tests/: app.spec.ts
docs/: ACCESSIBILITY.md  adding-tools.md  architecture.md  testing.md
docs/adr/: 001-why-fastapi.md  002-why-langgraph.md  003-why-sse-for-streaming.md
prompts/: README.md  add_testing_workflows.txt  build_backend_structure.txt  build_chatbot_ui.txt  enhance_ui_components.txt  improve_chatbot_ui_code.txt  improve_setup_and_quality.txt  improve_ui_ux_design.txt  use_agent_and tools.txt
research/: README.md  analysis.ipynb
src/: config.py  logger.py  routes.py  server.py  streaming.py  types.py
src/agent/: graph.py  prompts.py  state.py  tools.py
src/agent/templates/: agent_system_prompt.jinja2
tests/: test_agent_graph.py  test_agent_tools.py  test_server.py
