[project]
name = "ollama-chatbot"
version = "0.1.0"
description = "FastAPI backend for Ollama Chat UI."
readme = "README.md"
requires-python = ">=3.10"

# Core dependencies needed for the application logic
dependencies = [
    "fastapi==0.111.0",
    "pydantic==2.7.4",
    "httpx==0.27.0",
    "ruff==0.4.9",
    "langchain-core",
    "langgraph>=1.0.1",
    "langchain-ollama>=0.2.1",
    "langchain>=0.3.27",
    "pytest==8.3.4",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "pandas>=2.3.3",
    "notebook>=7.4.7",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]

# Development/Server dependencies, allowing us to install the server runner explicitly
[project.optional-dependencies]
server = [
    "uvicorn[standard]==0.30.1",
    "ruff==0.4.9",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Tells uv to look in optional-dependencies when resolving and installing
# We install all dependencies and the optional 'server' group

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
addopts = [
    "--cov=src",
    "--cov=tests",
    "--cov-report=term-missing",
    "--cov-report=xml:reports/coverage.xml",
]
